# TCPImplementation

./: CMakeLists.txt  Report.docx
Client/: Client.cpp  Client.h  Packet.h  SelectiveRepeat.cpp  SelectiveRepeat.h  client  main.cpp  thefile
Server/: Packet.h  SelectiveRepeat.cpp  SelectiveRepeat.h  Server.cpp  Server.h  main.cpp  server
first sample 0 plp/: cwnd.txt  time.txt
second sample 0.1 plp/: cwnd.txt  time.txt
third sample 0.2 plp/: cwnd.txt  time.txt
